--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gault Bruch Portfolio Site</title>
+    <title>Gault Bruch Online Portfolio</title>
     <link rel="stylesheet" href="main_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <!-- Above is simply to get our burger bar, perhaps we can shorten that in the future. -->
@@ -20,23 +20,25 @@
                 <li><a href="contact_main">Contact</a></li>
                 <li><a href="resume_main">Resume</a></li>
             </ul>
-            <!--Burgerbar (Hidden for Desktop)-->
-            <a href="javascript:void(0);" class="burger-icon" onclick="navBurger()";>
-                <i class="fa fa-bars"></i>
-            </a>
             <!--Dark Light Mode Toggle -->
             <label for="DLtoggle" class="toggle-label">
                 <input type="checkbox" id="DLtoggle" class="DLtoggle-checkbox">
                 <span class="DLtoggle-background"></span>
             </label>
+            <!--Burgerbar (Hidden for Desktop)-->
+            <a href="javascript:void(0);" class="burger-icon" onclick="navBurger()";>
+                <i class="fa fa-bars"></i>
+            </a>
         </nav>
         <section>
-            <h1>Gault Bruch, Web Developer</h1> <!--Add blinker to end, maybe ::after tag-->
+            <div class="typewriter">
+            <h1><span class="type" texCon='Gault Bruch, Web Developer'></span> </h1> <!--Add blinker to end, maybe ::after tag-->
             <p>Self taught web developer from Alberta, Canada. ##Add more here</p>
             <p class="email">Email: gibmac@outlook.com</p>
             <!--Relevant Resume and Github links ## add in some logos-->
             <a class="resume">My Resume</a>
             <a class="github">My Github</a>
+            </div>
         </section>
         <section class="project-list">
             <h2>My Projects</h2>
@@ -63,6 +65,6 @@
                 </article>
             </div>
         </section>
-        
+        <script src='main.js' defer></script>
     </body>
 </html>
