attempt to rebuild scss

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Gault Bruch Online Portfolio</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="dist/css/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 	<!-- Above is simply to get our burger bar, perhaps we can shorten that in the future. -->
 </head>
