Resume Init and Contact Form

--- a/index.html
+++ b/index.html
@@ -15,57 +15,56 @@
 			<div class="menu-btn">
 				<span class="menu-btn__burger"></span>
 			</div>
-			<div class="main-logo">Logo Plhdr</div>
-
-		<nav>
-			<!--Navigation Links (Hidden for Mobile)-->
-			<ul>
-				<li><a href="index.html" class="menu-nav__link">Home</a></li>
-				<li><a href="projects_main" class="menu-nav__link">Projects</a></li>
-				<li><a href="contact_main" class="menu-nav__link">Contact</a></li>
-				<li><a href="resume_main" class="menu-nav__link">Resume</a></li>
-			</ul>
-			<!--Burgerbar (Hidden for Desktop)-->
-			<!--<a href="javascript:void(0);" class="burger-icon" onclick="navBurger()";>
-				<i class="fa fa-bars"></i>
-			</a>-->
-		</nav>
-	</header>
-
-
-	<main>
+			<img class='logo' src="images/rocketlogo1.svg" alt="React Logo" height="60" width="60"></img>
+			
+			<nav>
+				<!--Navigation Links (Hidden for Mobile)-->
+				<ul>
+					<li><a href="index.html" class="menu-nav__link">Home</a></li>
+					<li><a href="/pages/contact.html" class="menu-nav__link">Contact</a></li>
+					<li><a href="/pages/resume.html" class="menu-nav__link">Resume</a></li>
+				</ul>
+				<!--Burgerbar (Hidden for Desktop)-->
+				<!--<a href="javascript:void(0);" class="burger-icon" onclick="navBurger()";>
+					<i class="fa fa-bars"></i>
+				</a>-->
+			</nav>
+		</header>
+		
+		
+		<main>
 			<section class="home">
-					<h1 class="starterh1">C:/Users/Guest></h1><h1 class="starterh1 type" texCon='Gault Bruch, Web Developer'>Loading Portfolio...</h1> <!--Add> blinker to end, maybe ::after tag-->
-					<p class="type" texCon="I'm a self taught web developer from Alberta, Canada. Take a look around! My projects are displayed below"></p>
-					<p class="type" texCon="If you like what you see feel free to get in contact, either through email,"></p>
-					<p class="email type" texCon="Email: gibmac@outlook.com"></p>
-					<p class="type"texCon="Or through the contact page"></p>
-					<!--Relevant Resume and Github links ## add in some logos-->
-					<div id="resume-links">
-							<a class="resume" href="#">Resume<i class="fa fa-file"></i></a>
-							<a class="github" href="https://github.com/GaultBruch">Github <i class="fa fa-github" aria-hidden="true"></i></a>
-					</div>
+				<h1 class="starterh1">C:/Users/Guest></h1><h1 class="starterh1 type" texCon='Gault Bruch, Web Developer'>Loading Portfolio...</h1> <!--Add> blinker to end, maybe ::after tag-->
+				<p class="type" texCon="I'm a self taught web developer from Alberta, Canada. Take a look around! My projects are displayed below"></p>
+				<p class="type" texCon="If you like what you see feel free to get in contact, either through email,"></p>
+				<p class="email type" texCon="Email: gibmac@outlook.com"></p>
+				<p class="type"texCon="Or through the contact page"></p>
+				<!--Relevant Resume and Github links ## add in some logos-->
+				<div id="resume-links">
+					<a class="resume" href="#">Resume <i class="fa fa-file"></i></a>
+					<a class="github" href="https://github.com/GaultBruch">Github <i class="fa fa-github" aria-hidden="true"></i></a>
+				</div>
 			</section>
 			<section class="project-list">
-					<h2 class="type" texCon="My Projects"></h2>
-					
-					<div class="project-cards">
-						<h3>Tech Stacks</h3>
-							<section class="tech-logos">
-									<img src="images/React Logo.svg" alt="React Logo" height="90" width="90"/>
-									<img src="images/Node.js_logo.svg" alt="Nodejs Logo" height="90" width="90"/>
-									<img src="images/Figma.svg" alt="Figma Logo" height="90" width="90" />
-									<img src="images/MongoDB_Logo_FullColorBlack_RGB.svg" alt="MongoDB Logo" height="90" width="240" />
-									<img src="images/TypeScript logo.svg" alt="Typescript Logo" height="90" width="90" />
-									<img src="images/Sass_Logo_Color.svg" alt="Sass Logo" height="90" width="90" />
+				<h2 class="type" texCon="My Projects"></h2>
+				
+				<div class="project-cards">
+					<h3>Tech Stacks</h3>
+					<section class="tech-logos">
+									<a href="#"><img src="images/React Logo.svg" alt="React Logo" height="90" width="90"/></a>
+									<a href="#"><img src="images/Figma.svg" alt="Figma Logo" height="90" width="90" /></a>
+									<a href="#"><img src="images/Node.js_logo.svg" alt="Nodejs Logo" height="90" width="90"/></a>
+									<a href="#"><img src="images/MongoDB_Logo_FullColorBlack_RGB.svg" alt="MongoDB Logo" height="90" width="240" /></a>
+									<a href="#"><img src="images/TypeScript logo.svg" alt="Typescript Logo" height="90" width="90" /></a>
+									<a href="#"><img src="images/Sass_Logo_Color.svg" alt="Sass Logo" height="90" width="90" /></a>
 							</section>
 							<article class="card">
 							<div class="displayCol">
 									<h3>Wordle Clone</h3>
-									<a href="" id="wordleClone"></a>
+									<a href="https://gaultbruch.github.io/wordle-clone/" id="wordleClone"></a>
 									<div class="projectSublinks">
 											<a href="https://github.com/GaultBruch/wordle-clone"><i class="fa fa-github" aria-hidden="true"></i> Github</a>
-											<a href="#"><i class="fa fa-desktop"></i> Website</a>
+											<a href="https://gaultbruch.github.io/wordle-clone/"><i class="fa fa-desktop"></i> Website</a>
 									</div>
 									<h3>Technologies used</h3>
 									<ul>
