--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../dist/css/contact.css">
-  <title>Document</title>
+  <link rel="icon" href="../images/rocketlogo1.svg" />
+  <title>Contact</title>
 </head>
 <body class="light">
   <!--Navigation Menu-->
@@ -36,11 +37,21 @@
       Email, Phone, and Organization (or any combination of) are necessary for a returned call/email.
       
     </h3>
-    <form action="https://formsubmit.co/gibmac@outlook.com" method="POST">
+    <form action="https://formsubmit.co/0a870b62bed744cbfff4dd349013cced" method="POST">
+      <!--Honeypot-->
+      <input type="text" name="_honey" style="display: none;">
+
+      <!--Disable Captcha-->
+      <input type="hidden" name="_captcha" value="false">
+
       <h2>Contact Form</h2>
       <div>
         <label for="name">Name:
           <input required type="text" name="name" id="name" />
+        </label>
+
+        <label for="orgname">Organization:
+          <input required type="text" name="orgname" id="orgname" />
         </label>
 
         <label for="email">Email:
