--- a/pages/resume.html
+++ b/pages/resume.html
@@ -37,6 +37,7 @@
       <p>Email: gibmac@outlook.com</p>
       <p>Junior Web Developer</p>
       <p>Phone: 403-771-1530</p>
+      <p>My Work: <a href="https://gaultbruch.github.io/">https://gaultbruch.github.io</a></p>
     </div>
 
     <div class="resume-body">
@@ -54,6 +55,7 @@
         <li>Experience building and consuming RESTful APIs</li>
         <li>Understanding of HTML, CSS3, and current JavaScript ES6 practices (This site is built with it!)</li>
         <li>Utilized Figma to build out templates for website designs</li>
+        <li>Solid understanding of Git</li>
         <li>Work experience with computer pairing and hardware automation using a self-built socket server.</li>
         <li>Experience with Python program optimization using GPU computing and LLVM conversion to speed up computational calculations for molecular simulations.</li>
         <li>Experience working with machine learning packages (Tensorflow, PyTorch) as well as building small machine learning projects in Python</li>
